--- a/pacha-app-api-master/docker-compose.yaml
+++ b/pacha-app-api-master/docker-compose.yaml
@@ -1,34 +1,13 @@
 version: '3'
 
 services:
-  api:
-    container_name: server-api
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - '80:3031'
-    env_file:
-      - .env
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    depends_on:
-      - db
-    networks:
-      - app-network
-    command: >
-      sh -c "
-      npx prisma migrate deploy &&
-      npm run start"
-
   db:
     image: postgres:16-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: 123456789
-      POSTGRES_DB: app
-      POSTGRES_USER: mharbouli
+      POSTGRES_DB: pacha
+      POSTGRES_USER: pacha
     ports:
       - "5432:5432"
     networks:
@@ -39,4 +18,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
